[tool.poetry]
name = "chat"
version = "1.2.0"
description = "chat for you alone"
authors = ["muhammmadzakirhamadan rzaki9353@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "^0.8.post1"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
